# OpenGL

./: .gitignore  CMakeLists.txt  OpenGL.sln  generate_vs2022_build.bat
OpenGL/: OpenGL.vcxproj  OpenGL.vcxproj.filters  TestTriangle.h  imgui.ini
OpenGL/res/shader/: Basic.shader  FragColor.shader  VertexColor.shader  model_shader.shader
OpenGL/res/shader/Shadertoy/: New.shader  Raymarching_primitives.shader  Raytracer.shader  Segmented_spiral.shader  Unreal_intro.shader  VolumetricIntegration.shader  uv_test.shader  w10.shader
OpenGL/src/: Application.cpp  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Model.cpp  Model.h  MouseInput.h  OBJLoader.cpp  OBJLoader.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp
OpenGL/src/tests/: Test.cpp  Test.h  TestClearColor.cpp  TestModelLoading.cpp  TestModelLoading.h  TestShaderToy.cpp  TestShaderToy.h  TestTexture2D.cpp  TestTexture2D.h  TestTriangle.cpp  TestTriangle.h
patches/: Texteditor.patch
res/models/: apple.mtl
res/shader/: model_shader.shader
src/: Application.cpp  Hex.h  Mesh.h  Model.cpp  OBJLoader.cpp  OBJLoader.h  Renderer.cpp  Shader.h  Texture.cpp  Texture.h  VertexBufferLayout.h
src/tests/: Test.cpp  TestClearColor.cpp  TestClearColor.h  TestModelLoading.cpp  TestShaderToy.cpp  TestShaderToy.h  TestTexture2D.cpp  TestTexture2D.h  TestTriangle.cpp  TestTriangle.h
